@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry">
+  <!-- event-registration.js has been deprecated and disabled on new sites, 
+       migration leaves it enabled -->
+</object>
